p2/confs/network.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2-ingress
  annotations:
    kubernetes.io/spec.ingressClassName: nginx
spec:
  rules:
